--- a/src/index.css
+++ b/src/index.css
@@ -12,4 +12,5 @@ body {
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   padding: 0;
   margin: 0 auto;
+  width: 100vw;
 }
